--- a/public/styles/begis-law.com.css
+++ b/public/styles/begis-law.com.css
@@ -11,6 +11,8 @@
   --secondary-foreground: rgb(23, 23, 27);
   --muted: rgb(244, 244, 245);
   --muted-foreground: rgb(113, 113, 122);
+  --warning: rgb(255, 204, 0);
+  --warning-foreground: rgb(11, 9, 8);
   --accent: rgb(244, 244, 245);
   --accent-foreground: rgb(23, 23, 27);
   --destructive: rgb(238, 68, 68);
