--- a/public/styles/propertyspace.co.th.css
+++ b/public/styles/propertyspace.co.th.css
@@ -8,7 +8,7 @@
     --card-foreground: rgb(11, 9, 8);
     --popover: rgb(255, 255, 255);
     --popover-foreground: rgb(11, 9, 8);
-    --primary: rgb(27, 25, 23);
+    --primary: rgb(22,38,63);
     --primary-foreground: rgb(249, 249, 248);
     --secondary: rgb(245, 245, 244);
     --secondary-foreground: rgb(27, 25, 23);
