Refactor imports, update component styles, and fix file paths

--- a/public/property.com/theme.css
+++ b/public/property.com/theme.css
@@ -8,9 +8,9 @@
     --card-foreground: rgb(11, 9, 8);
     --popover: rgb(255, 255, 255);
     --popover-foreground: rgb(11, 9, 8);
-    --primary: rgb(22,38,63);
+    --primary: rgb(2,75,120);
     --primary-foreground: rgb(249, 249, 248);
-    --secondary: rgb(245, 245, 244);
+    --secondary: rgb(222,218,215);
     --secondary-foreground: rgb(27, 25, 23);
     --muted: rgb(245, 245, 244);
     --muted-foreground: rgb(120, 112, 107);
