--- a/public/property.com/theme.css
+++ b/public/property.com/theme.css
@@ -2,27 +2,27 @@
 
 /* @layer base { */
 :root {
-  --background: rgb(255, 255, 255);
-  --foreground: rgb(11, 9, 8);
-  --card: rgb(255, 255, 255);
-  --card-foreground: rgb(11, 9, 8);
-  --popover: rgb(255, 255, 255);
-  --popover-foreground: rgb(11, 9, 8);
-  --primary: rgb(2, 75, 120);
-  --primary-foreground: rgb(249, 249, 248);
-  --secondary: rgb(222, 218, 215);
-  --secondary-foreground: rgb(27, 25, 23);
-  --muted: rgb(245, 245, 244);
-  --muted-foreground: rgb(120, 112, 107);
-  --warning: rgb(255, 204, 0);
-  --warning-foreground: rgb(11, 9, 8);
-  --accent: rgb(245, 245, 244);
-  --accent-foreground: rgb(27, 25, 23);
-  --destructive: rgb(238, 68, 68);
-  --destructive-foreground: rgb(249, 249, 248);
-  --border: rgb(231, 228, 227);
-  --input: rgb(231, 228, 227);
-  --ring: rgb(11, 9, 8);
+  --background: 255 255 255;
+  --foreground: 11 9 8;
+  --card: 255 255 255;
+  --card-foreground: 11 9 8;
+  --popover: 255 255 255;
+  --popover-foreground: 11 9 8;
+  --primary: 2 75 120;
+  --primary-foreground: 249 249 248;
+  --secondary: 222 218 215;
+  --secondary-foreground: 27 25 23;
+  --muted: 245 245 244;
+  --muted-foreground: 120 112 107;
+  --warning: 255 204 0;
+  --warning-foreground: 11 9 8;
+  --accent: 245 245 244;
+  --accent-foreground: 27 25 23;
+  --destructive: 238 68 68;
+  --destructive-foreground: 249 249 248;
+  --border: 231 228 227;
+  --input: 231 228 227;
+  --ring: 11 9 8;
   --radius: 0.5rem;
 }
 /* } */
